2008-11-22  Glenn Morris  <rgm@gnu.org>

	* vc-mtn.el (vc-mtn-diff-switches): New option.
	(vc-mtn-program): Rename from vc-mtn-command, for
	consistency with other backends.  Keep old name as alias.
	Update callers.  Make it a defcustom.
	(vc-mtn-diff): Give it a doc string.  Apply diff switches.

	* vc-arch.el (vc-arch-program): Rename from vc-arch-command, for
	consistency with other backends.  Keep old name as alias.
	Make it a defcustom.
	(vc-arch-command, vc-arch-trim-revlib): Adapt for above change.

	* vc-hg.el (vc-hg-program): New option.
	(vc-hg-state, vc-hg-working-revision, vc-hg-command):
	Use vc-hg-program rather than hard-coded "hg".

	* vc-svn.el: Remove leading `*' from defcustom doc-strings.
	(vc-svn-program): Move defcustom to start.
	(vc-svn-create-repo, vc-svn-modify-change-comment):
	Use vc-svn-program rather than hard-coded "svn".

	* menu-bar.el: Stylistic consistency fixes for various menu and
	help texts.

	* kmacro.el (kmacro-insert-counter): Doc fix.

2008-11-21  Ivan Shmakov  <oneingray@gmail.com>  (tiny change)

	* progmodes/tcl.el (tcl-filter): Don't forcibly move point.

2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-indent-to): New function.
	(quail-completion-1, quail-completion-list-translations)
	(quail-insert-decode-map): Use it to improve alignment.
	(quail-build-decode-map): Don't ignore latin-1 chars.
	(quail-help): Increase the max decode-map size so that even the TeX map
	gets printed.

	* bookmark.el (bookmark-get-bookmark): Add `noerror' arg.
	Signal error for invalid bookmark.
	(bookmark-get-bookmark-record): Undo last change.
	(bookmark-store, bookmark-delete): Use new arg `noerror'.

	* bookmark.el (bookmark-buffer-file-name): Also abbreviate dired-dir.
	Suggested by Toru TSUNEYOSHI.

2008-11-21  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* byte-opt.el (byte-compile-butlast): Move up in file.
	(byte-optimize-plus): Don't call
	byte-optimize-delay-constants-math (bug#1334).